@@ -1,3 +1,8 @@
+Tue Apr 29 19:16:13 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
+
+ - clients/upsclient.c: delay initialization of the context buffer
+   until we know we have a connection
+
 Tue Apr 29 19:13:22 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
 
  - packaging/opensuse/nut.spec.in: fix broken shell scripting
